syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/server";

service Collection {
    rpc Create(CreateCollectionRequest) returns (CreateCollectionResponse);
    rpc List(ListCollectionRequest) returns (ListCollectionResponse);
}

message Policy {
    double DataProvider = 1;
    double DataProcessor = 2;
    double DataRelayer = 3;
    double DataOwner = 4;
}

message CreateCollectionRequest {
    string appId = 1; // ID
    string schemaId = 2; // ID
    reserved 3 to 10;
    Policy policy = 11;
}

message CreateCollectionResponse {
    string collectionId = 1; // ID
}

message ListCollectionRequest {
    string appId = 1; // TODO: Temporary
}

message ListCollectionResponse {
    message Collection {
        string id = 1; // ID
        string schemaId = 2; // ID
    }
    int32 total = 1;
    repeated Collection collections = 2;
}
